给播放图标和titie加入底色

--- a/jiaozivideoplayer/src/main/res/layout/jz_layout_standard.xml
+++ b/jiaozivideoplayer/src/main/res/layout/jz_layout_standard.xml
@@ -136,6 +136,7 @@
             android:layout_toEndOf="@+id/back"
             android:layout_toLeftOf="@+id/battery_time_layout"
             android:layout_toRightOf="@+id/back"
+            android:background="#333333"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="#ffffff"
@@ -187,7 +188,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:background="#333333"
+        >
 
         <ImageView
             android:id="@+id/start"
